Support for Laravel 11

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,16 +1,15 @@
 includes:
-    - ./vendor/nunomaduro/larastan/extension.neon
+    - vendor/larastan/larastan/extension.neon
+    - vendor/nesbot/carbon/extension.neon
 
 parameters:
 
     paths:
         - src
 
-    # The level 8 is the highest level
+    # The level 10 is the highest level
     level: 5
 
     ignoreErrors:
 
     excludePaths:
-
-    checkMissingIterableValueType: false
