--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, windows-latest]
-        php: [8.2, 8.3]
+        php: [8.1, 8.2, 8.3]
         laravel: [8.*, 10.*, 11.*]
         stability: [prefer-lowest, prefer-stable]
         include:
@@ -21,6 +21,8 @@ jobs:
             testbench: ^9.0
           - laravel: 10.*
             testbench: ^8.0
+          - laravel: 8.*
+            testbench: ^6.6
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
