--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "require-dev": {
         "brianium/paratest": "^6.2|^7.4",
-        "larastan/larastan": "^3.0",
+        "larastan/larastan": "^2.0|^3.0",
         "nunomaduro/collision": "^5.3|^6.1.0|^8.0",
         "orchestra/testbench": "^6.15|^7.0.1|^8.0|^9.0",
         "phpunit/phpunit": "^9.3|^10.5"
