--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,12 +17,24 @@ jobs:
         laravel: [8.*, 10.*, 11.*]
         stability: [prefer-lowest, prefer-stable]
         include:
-          - laravel: 11.*
+          - php: 8.2
+            laravel: 11.*
             testbench: ^9.0
-          - laravel: 10.*
+          - php: 8.3
+            laravel: 11.*
+            testbench: ^9.0
+          - php: 8.1
+            laravel: 10.*
             testbench: ^8.0
-          - laravel: 8.*
-            testbench: ^6.6
+          - php: 8.2
+            laravel: 10.*
+            testbench: ^8.0
+          - php: 8.3
+            laravel: 10.*
+            testbench: ^8.0
+          - php: 8.1
+            laravel: 8.*
+            testbench: ^6.0
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
