--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,22 +19,28 @@ jobs:
         include:
           - php: 8.2
             laravel: 11.*
-            testbench: ^9.0
+            larastan: ^3.0
           - php: 8.3
             laravel: 11.*
-            testbench: ^9.0
+            larastan: ^3.0
           - php: 8.1
             laravel: 10.*
-            testbench: ^8.0
+            larastan: ^2.0
           - php: 8.2
             laravel: 10.*
-            testbench: ^8.0
+            larastan: ^2.0
           - php: 8.3
             laravel: 10.*
-            testbench: ^8.0
+            larastan: ^2.0
+          - php: 8.1
+            laravel: 9.*
+            larastan: ^2.0
+          - php: 8.2
+            laravel: 9.*
+            larastan: ^2.0
           - php: 8.1
             laravel: 8.*
-            testbench: ^6.0
+            larastan: ^1.0
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
@@ -58,6 +64,7 @@ jobs:
         run: |
           composer require "laravel/framework:${{ matrix.laravel }}"
           composer require "orchestra/testbench:${{ matrix.testbench }}" --dev --no-update
+          composer require "larastan/larastan:${{ matrix.larastan }}" --dev --no-update
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
       - name: Execute tests
