--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,34 +13,35 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, windows-latest]
-        php: [8.1, 8.2, 8.3]
-        laravel: [8.*, 10.*, 11.*]
+        php: [8.1, 8.2, 8.3, 8.4]
+        laravel: [10.*, 11.*]
         stability: [prefer-lowest, prefer-stable]
         include:
-          - php: 8.2
-            laravel: 11.*
+          - laravel: 11.*
+            php: 8.2
+            testbench: ^9.0
             larastan: ^3.0
-          - php: 8.3
-            laravel: 11.*
+          - laravel: 11.*
+            php: 8.3
+            testbench: ^9.0
             larastan: ^3.0
-          - php: 8.1
-            laravel: 10.*
+          - laravel: 11.*
+            php: 8.4
+            testbench: ^9.0
+            larastan: ^3.0
+
+          - laravel: 10.*
+            php: 8.1
+            testbench: ^8.0
             larastan: ^2.0
-          - php: 8.2
-            laravel: 10.*
+          - laravel: 10.*
+            php: 8.2
+            testbench: ^8.0
             larastan: ^2.0
-          - php: 8.3
-            laravel: 10.*
+          - laravel: 10.*
+            php: 8.3
+            testbench: ^8.0
             larastan: ^2.0
-          - php: 8.1
-            laravel: 9.*
-            larastan: ^2.0
-          - php: 8.2
-            laravel: 9.*
-            larastan: ^2.0
-          - php: 8.1
-            laravel: 8.*
-            larastan: ^1.0
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
@@ -62,9 +63,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}"
-          composer require "orchestra/testbench:${{ matrix.testbench }}" --dev --no-update
-          composer require "larastan/larastan:${{ matrix.larastan }}" --dev --no-update
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "larastan/larastan:${{ matrix.larastan }}" --no-interaction --no-update
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
       - name: Execute tests
