--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,34 +13,45 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, windows-latest]
-        laravel: [10.*, 11.*]
         stability: [prefer-lowest, prefer-stable]
         include:
+          # Laravel 11 mappings
           - laravel: 11.*
             php: 8.2
             testbench: ^9.0
             larastan: ^3.0
+            stability: prefer-stable
+
           - laravel: 11.*
             php: 8.3
             testbench: ^9.0
             larastan: ^3.0
+            stability: prefer-stable
+
           - laravel: 11.*
             php: 8.4
             testbench: ^9.0
             larastan: ^3.0
+            stability: prefer-stable
 
+          # Laravel 10 mappings
           - laravel: 10.*
             php: 8.1
             testbench: ^8.0
             larastan: ^2.0
+            stability: prefer-lowest
+
           - laravel: 10.*
             php: 8.2
             testbench: ^8.0
             larastan: ^2.0
+            stability: prefer-stable
+
           - laravel: 10.*
             php: 8.3
             testbench: ^8.0
             larastan: ^2.0
+            stability: prefer-stable
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
